fixed overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -502,7 +502,7 @@ p {
     overflow-x:hidden
   }
   .introduction{
-    max-width: 100%;
+    max-width: 90%;
     max-height: 250px;
 
   }
